Add another project

--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -16,6 +16,7 @@ body:
       description: В каком проекте найден баг?
       options:
         - MS bot
+        - HB Public
     validations:
       required: true
   - type: textarea
