Add another project

--- a/.github/ISSUE_TEMPLATE/idea-suggest.yaml
+++ b/.github/ISSUE_TEMPLATE/idea-suggest.yaml
@@ -16,6 +16,7 @@ body:
       description: В какой проект хотите предложить идею?
       options:
         - MS bot
+        - HB Public
     validations:
       required: true
   - type: textarea
