--- a/.github/ISSUE_TEMPLATE/improvement-suggest.yaml
+++ b/.github/ISSUE_TEMPLATE/improvement-suggest.yaml
@@ -16,6 +16,7 @@ body:
       description: В каком проекте необходимо улучшение?
       options:
         - MS bot
+        - HB Public
     validations:
       required: true
   - type: textarea
